moving shared shader code to common files

--- a/Samples/Desktop/D3D12Raytracing/src/D3D12RaytracingMiniEngineSample/ModelViewer_VS16.vcxproj
+++ b/Samples/Desktop/D3D12Raytracing/src/D3D12RaytracingMiniEngineSample/ModelViewer_VS16.vcxproj
@@ -179,9 +179,8 @@
   <ItemGroup>
     <ClInclude Include="DXSampleHelper.h" />
     <ClInclude Include="Shaders\HlslCompat.h" />
-    <ClInclude Include="Shaders\ModelViewerRayTracing.h" />
+    <ClInclude Include="Shaders\RayCommon.h" />
     <ClInclude Include="Shaders\ModelViewerRS.h" />
-    <ClInclude Include="Shaders\RayTracingHlslCompat.h" />
     <ClInclude Include="Shaders\Shading.h" />
   </ItemGroup>
   <ItemGroup>
