WIP beam tracing: (not working yet) tile per-pixel intersect and shade

--- a/Samples/Desktop/D3D12Raytracing/src/D3D12RaytracingMiniEngineSample/ModelViewer_VS16.vcxproj
+++ b/Samples/Desktop/D3D12Raytracing/src/D3D12RaytracingMiniEngineSample/ModelViewer_VS16.vcxproj
@@ -193,6 +193,7 @@
   <ItemGroup>
     <ClInclude Include="DXSampleHelper.h" />
     <ClInclude Include="Shaders\HlslCompat.h" />
+    <ClInclude Include="Shaders\Intersect.h" />
     <ClInclude Include="Shaders\RayCommon.h" />
     <ClInclude Include="Shaders\ModelViewerRS.h" />
     <ClInclude Include="Shaders\Shading.h" />
