-refactored triangle fetch and interpolate for DXR paths -calculate beam tracing texcoord derivatives via lane sharing (groupshared fallback until lane sharing ops are fixed) -calculate ray tracing texcoord derivatives via finite differencing (prior code was trying to do this, but wasn't correct, so I rewrote it)

--- a/Samples/Desktop/D3D12Raytracing/src/D3D12RaytracingMiniEngineSample/ModelViewer_VS16.vcxproj
+++ b/Samples/Desktop/D3D12Raytracing/src/D3D12RaytracingMiniEngineSample/ModelViewer_VS16.vcxproj
@@ -200,6 +200,7 @@
     <ClInclude Include="Shaders\RayCommon.h" />
     <ClInclude Include="Shaders\ModelViewerRS.h" />
     <ClInclude Include="Shaders\Shading.h" />
+    <ClInclude Include="Shaders\TriFetch.h" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\..\..\MiniEngine\Core\Core_VS16.vcxproj">
