additional cleanup of ray gen and derivatives old code

--- a/Samples/Desktop/D3D12Raytracing/src/D3D12RaytracingMiniEngineSample/ModelViewer_VS16.vcxproj
+++ b/Samples/Desktop/D3D12Raytracing/src/D3D12RaytracingMiniEngineSample/ModelViewer_VS16.vcxproj
@@ -199,6 +199,7 @@
     <ClInclude Include="Shaders\Intersect.h" />
     <ClInclude Include="Shaders\RayCommon.h" />
     <ClInclude Include="Shaders\ModelViewerRS.h" />
+    <ClInclude Include="Shaders\RayGen.h" />
     <ClInclude Include="Shaders\Shading.h" />
     <ClInclude Include="Shaders\TriFetch.h" />
   </ItemGroup>
