beam MSAA (but no quad shading yet, derivatives still off at triangle edges)

--- a/Samples/Desktop/D3D12Raytracing/src/D3D12RaytracingMiniEngineSample/ModelViewer_VS16.vcxproj
+++ b/Samples/Desktop/D3D12Raytracing/src/D3D12RaytracingMiniEngineSample/ModelViewer_VS16.vcxproj
@@ -201,6 +201,7 @@
     <ClInclude Include="Shaders\ModelViewerRS.h" />
     <ClInclude Include="Shaders\RayGen.h" />
     <ClInclude Include="Shaders\Shading.h" />
+    <ClInclude Include="Shaders\Sort.h" />
     <ClInclude Include="Shaders\TriFetch.h" />
   </ItemGroup>
   <ItemGroup>
