WIP: (GPU hangs) -splitting into separate vis + shade compute shaders -quad shading

--- a/Samples/Desktop/D3D12Raytracing/src/D3D12RaytracingMiniEngineSample/ModelViewer_VS16.vcxproj.filters
+++ b/Samples/Desktop/D3D12Raytracing/src/D3D12RaytracingMiniEngineSample/ModelViewer_VS16.vcxproj.filters
@@ -13,7 +13,10 @@
     <FxCompile Include="Shaders\BeamsLib.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
-    <FxCompile Include="Shaders\BeamsShadeQuads.hlsl">
+    <FxCompile Include="Shaders\BeamsShade.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
+    <FxCompile Include="Shaders\BeamsVis.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
   </ItemGroup>
