--- a/Samples/Desktop/D3D12Raytracing/src/D3D12RaytracingMiniEngineSample/ModelViewer_VS16.vcxproj
+++ b/Samples/Desktop/D3D12Raytracing/src/D3D12RaytracingMiniEngineSample/ModelViewer_VS16.vcxproj
@@ -162,16 +162,15 @@
       </EntryPointName>
       <AdditionalOptions> -HV 2017 -Zpr </AdditionalOptions>
     </FxCompile>
-    <FxCompile Include="Shaders\BeamsShadeQuads.hlsl">
-      <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">ShadeQuads</EntryPointName>
-      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">6.3</ShaderModel>
-      <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Release|x64'">ShadeQuads</EntryPointName>
-      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Release|x64'">6.3</ShaderModel>
-      <EntryPointName Condition="'$(Configuration)|$(Platform)'=='Profile|x64'">ShadeQuads</EntryPointName>
-      <ShaderModel Condition="'$(Configuration)|$(Platform)'=='Profile|x64'">6.3</ShaderModel>
-      <AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">-Zpr %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='Release|x64'">-Zpr %(AdditionalOptions)</AdditionalOptions>
-      <AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='Profile|x64'">-Zpr %(AdditionalOptions)</AdditionalOptions>
+    <FxCompile Include="Shaders\BeamsShade.hlsl">
+      <EntryPointName>BeamsQuadShade</EntryPointName>
+      <ShaderModel>6.3</ShaderModel>
+      <AdditionalOptions>-Zpr %(AdditionalOptions)</AdditionalOptions>
+    </FxCompile>
+    <FxCompile Include="Shaders\BeamsVis.hlsl">
+      <EntryPointName>BeamsQuadVis</EntryPointName>
+      <ShaderModel>6.3</ShaderModel>
+      <AdditionalOptions>-Zpr %(AdditionalOptions)</AdditionalOptions>
     </FxCompile>
     <FxCompile Include="Shaders\RaysLib.hlsl">
       <ShaderType>Library</ShaderType>
